# AIMS2025-NeuroSimInf

./: README.md  pyproject.toml
data/: observation.csv  pyloric_observation.csv  throw-x_o-3.pickle
notebooks/: final_project.ipynb  hello_world.ipynb  week01.ipnyb  week01.ipynb  week02a.ipynb  week02b.ipynb  week03.ipynb
pyloric/: __init__.py  channels.py  model.py  synapses.py
